--- a/html/Yorkvillemap.html
+++ b/html/Yorkvillemap.html
@@ -58,7 +58,7 @@ Yorkville
 <br>
 <br>
 </br>
-		<a href = "../docs/Yorkvillemap">This is a link to the annotated Markdown page</a><sup><a href="#fn2" id="ref2">2</a></sup> 
+		<a href = "../docs/Yorkvillemap.md">This is a link to the annotated Markdown page</a><sup><a href="#fn2" id="ref2">2</a></sup> 
 <br>
 <br>
 </br>
