--- a/html/Yorkvillemap.html
+++ b/html/Yorkvillemap.html
@@ -12,7 +12,7 @@
 Yorkville 
 </title> 
 		
-<link href="../styles/Stylezen.css" rel="stylesheet" type="text/css">
+<link href="../styles/stylezen.css" rel="stylesheet" type="text/css">
 			
 <link href="../images/hfav.png" rel="icon" type="image/png"
 		
